# tests_preliminaires

./: CMakeLists.txt  README.md  setup2.py  test.py
python_example.egg-info/: SOURCES.txt
python_example/python_example.egg-info/: PKG-INFO
src/: .example.cpp.swp  app.cpp  example.cpp  example.h  main.cpp
tests/: test.py
